--- a/test.ipynb
+++ b/test.ipynb
@@ -114,8 +114,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c03f4745-be7c-41f1-b9c9-7fe054a0d595",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ranxk/miniconda3/envs/repvit/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved weights only to repvit_m1_0_weights_only.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import timm\n",
+    "\n",
+    "model_name = \"repvit_m1_0\"   # 或其他如 repvit_m1_5 / repvit_m2_3\n",
+    "model = timm.create_model(model_name, pretrained=True).eval()\n",
+    "\n",
+    "\n",
+    "# 如果只想保存权重参数（推荐）\n",
+    "torch.save(model.state_dict(), f\"{model_name}_weights_only.pth\")\n",
+    "print(f\"Saved weights only to {model_name}_weights_only.pth\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b8b4ee5-6ab7-49d3-881e-d8b8e4789aab",
    "metadata": {},
    "outputs": [],
    "source": []
