add code to play with data

--- a/test.ipynb
+++ b/test.ipynb
@@ -149,8 +149,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2b8b4ee5-6ab7-49d3-881e-d8b8e4789aab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ranxk/miniconda3/envs/repvit/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits dim = 1000\n",
+      "features dim = 448\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timm, torch\n",
+    "model = timm.create_model(\"repvit_m1_0\", pretrained=True).eval()\n",
+    "x = torch.zeros(1, 3, 224, 224)\n",
+    "y = model(x)                 # 分类输出\n",
+    "print(\"logits dim =\", y.shape[1])   # 通常是 1000\n",
+    "\n",
+    "# 如果想看倒数特征（forward_features + GAP）\n",
+    "with torch.no_grad():\n",
+    "    feats = model.forward_features(x)\n",
+    "    if feats.ndim == 4: feats = feats.mean(dim=(2,3))\n",
+    "print(\"features dim =\", feats.shape[1])  # 这是特征维度（与 num_features 一致）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e98b2724-59e6-4826-94ba-cb717a7df04a",
    "metadata": {},
    "outputs": [],
    "source": []
